<resources>
    <string name="app_name">xTrack</string>
    <string name="inicio">Experiencias</string>
    <string name="search">Buscar</string>
    <string name="add_new_button">Nuevo</string>
    <string name="map">Seleccione ubicación</string>
    <string name="addPhoto">Agregar foto</string>
    <string name="experience_title">Experiencia</string>

    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="city">Ciudad</string>
    <string name="location">Ubicación</string>
    <string name="date">Fecha</string>
    <string name="save">Guardar</string>
    <string name="insert">Agregar</string>
    <string name="maps">Buscar</string>
    <string name="addDate">Asignar Fecha Experiencia</string>

    <string name="takeFromGalery">Seleccione</string>
    <string name="takePhoto">Tomar</string>
    <string name="seePhotos">Ver fotos</string>


</resources>